tests/type-errors/invalid_bytes_literal.arl
archetype invalid_bytes_literal

variable res : bytes = 0x100
